Flickering fix

--- a/app/assets/stylesheets/pages/_victory.scss
+++ b/app/assets/stylesheets/pages/_victory.scss
@@ -7,6 +7,7 @@
   // height: 92vh;
   align-items: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .btn-victory {
